# Change Log
This file contains a log of major changes in letsencrypt.sh

## [x.x.x] - xxxx-xx-xx
## Changed
- Config is now named `config` instead of `config.sh`!
- Location of domains.txt is now configurable via DOMAINS_TXT config variable
- Location of certs directory is now configurable via CERTDIR config variable
- signcsr command now also outputs chain certificate
- Location of account-key(s) changed
- Default WELLKNOWN location is now `/var/www/letsencrypt`

## Added
- Added option to add CSR-flag indicating OCSP stapling to be mandatory
- Initial support for configuration on per-certificate base
- Support for per-CA account keys and custom config for output cert directory, license, etc.
- Added option to select IP version of name to address resolution

## Fixed
- letsencrypt.sh no longer stores account keys from invalid registrations

## [0.2.0] - 2016-05-22
### Changed
- PRIVATE_KEY config parameter has been renamed to ACCOUNT_KEY to avoid confusion with certificate keys
- deploy_cert hook now also has the certificates timestamp as standalone parameter
- Temporary files are now identifiable (template: letsencrypt.sh-XXXXXX)
- Private keys are now regenerated by default

### Added
- Added documentation to repository

### Fixed
- Fixed bug with uppercase names in domains.txt (script now converts everything to lowercase)
- mktemp no longer uses the deprecated `-t` parameter.
- Compatibility with "pretty" json

## [0.1.0] - 2016-03-25
### Changed
- This is the first numbered version of letsencrypt.sh